[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=2]
[ext_resource path="res://scripts/felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=5]
[ext_resource path="res://assets/grave.png" type="Texture" id=6]
[ext_resource path="res://scripts/barra.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Bater"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spr_Idle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spr_Bate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=2]
size = 140
font_data = ExtResource( 10 )

[node name="MainNode" type="Node"]
script = ExtResource( 1 )

[node name="Spr_backgroud" type="Sprite" parent="."]
position = Vector2( -708.5, -33.47 )
scale = Vector2( 2.028, 2.102 )
texture = ExtResource( 2 )
centered = false

[node name="Felpudo" type="Node2D" parent="."]
position = Vector2( 220, 1070 )
z_index = 3
script = ExtResource( 3 )

[node name="Spr_Idle" type="Sprite" parent="Felpudo"]
position = Vector2( -1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Spr_Bate" type="Sprite" parent="Felpudo"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Spr_Grave" type="Sprite" parent="Felpudo"]
visible = false
modulate = Color( 0.345098, 0.698039, 0.172549, 1 )
position = Vector2( -46, 40 )
scale = Vector2( 0.207, 0.145 )
texture = ExtResource( 6 )
flip_h = true

[node name="Anim" type="AnimationPlayer" parent="Felpudo"]
anims/Bater = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Barris" type="Node2D" parent="."]
z_index = 1

[node name="DestBarris" type="Node2D" parent="."]

[node name="Barra" type="Node2D" parent="."]
position = Vector2( 360, 100 )
scale = Vector2( 2, 2 )
z_index = 4
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Barra"]
texture = ExtResource( 8 )

[node name="Marcador" type="Sprite" parent="Barra"]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 598, 88, 1, 0 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="Pontos" type="Label" parent="Control"]
margin_left = 3.0
margin_top = 121.001
margin_right = 715.0
margin_bottom = 290.001
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.792157, 0.352941, 1 )
text = "0"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
